Adding google authentication

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/App.css"></link>
+    <script src="https://apis.google.com/js/platform.js"></script>
     <title>Vacations Manager</title>
   </head>
   <body>
